--- a/style.css
+++ b/style.css
@@ -9,3 +9,17 @@ body {
     overflow: hidden;
     position: relative;
 }
+
+.floating_mini_icons {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.floating_mini_icons img {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    animation: float 5s infinite ease-in-out;
+}
