--- a/style.css
+++ b/style.css
@@ -29,3 +29,29 @@ body {
     50% { transform: translateY(-20px); }
     100% { transform: translateY(0); }
 }
+
+
+.center_elements {
+    text-align: center;
+    z-index: 1;
+}
+
+.center_elements img {
+    width: 200px;
+    height: auto;
+}
+
+.center_elements button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #ffcccb;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.center_elements button:hover {
+    background-color: #fab0b0;
+}
