--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ body {
     position: relative;
 }
 
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, #d9f0ff 1px, transparent 1px),
+                      linear-gradient(to bottom, #d9f0ff 1px, transparent 1px);
+    background-size: 20px 20px;
+    pointer-events: none;
+    z-index: 0;
+}
+
 .floating_mini_icons {
     position: absolute;
     width: 100%;
