Design: 버튼 text 스타일 변경

--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@ body::before {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    color: white;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
 }
 
 .center_elements button:hover {
