Feat: 버튼 클릭 시, 아이콘, 이미지 사라지는 기능 추가

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body::before {
 }
 
 
-/* .background-grid {
+.background-grid {
     position: absolute;
     top: 0;
     left: 0;
@@ -89,4 +89,4 @@ body::before {
 
 .background-grid.rotate-left {
     transform: rotate(-10deg);
-} */
+}
