--- a/style.css
+++ b/style.css
@@ -27,12 +27,22 @@ body {
     transform: rotateX(50deg) rotateY(0deg) rotateZ(-10deg) translateZ(-100px);
 }
 
+/* .content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1;
+} */
+
 .floating_mini_icons {
     position: absolute;
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: 1;
 }
 
 .floating_mini_icons img {
@@ -57,6 +67,11 @@ body {
 .center_elements img {
     width: 200px;
     height: auto;
+    transition: transform 1s ease;
+}
+
+.center_elements img.rotate-left {
+    transform: rotateX(50deg) rotateY(0deg) rotateZ(-10deg) translateZ(-100px);
 }
 
 .center_elements button {
