--- a/style.css
+++ b/style.css
@@ -27,17 +27,6 @@ body {
     transform: rotateX(50deg) rotateY(0deg) rotateZ(-10deg) translateZ(-100px);
 }
 
-/* .content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 1;
-} */
-
 .floating_mini_icons {
     position: absolute;
     width: 100%;
@@ -89,4 +78,13 @@ body {
 
 .center_elements button:hover {
     background-color: #fab0b0;
+}
+
+.backyong {
+    position: absolute;
+    top: 50%;
+    left: -200px; /* 초기 위치 설정 */
+    transform: translateX(0%);
+    transition: transform 1s ease;
+    z-index: 1;
 }
