--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     z-index: 2;
 }
 
-.center_elements img {
+.center_elements img{
     width: 200px;
     height: auto;
     transition: transform 1s ease;
@@ -82,9 +82,8 @@ body {
 
 .backyong {
     position: absolute;
-    top: 50%;
+    top: 70%;
     left: -200px; /* 초기 위치 설정 */
-    transform: translateX(0%);
-    transition: transform 1s ease;
-    z-index: 1;
+    transform: translateY(-50%);
+    transition: left 2s ease;
 }
