Chore: 뿌공이 이미지 변수 이름 변경

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
     background-color: #fab0b0;
 }
 
-.backyong {
+.bbugong {
     position: absolute;
     top: 70%;
     left: -200px; /* 초기 위치 설정 */
