--- a/style.css
+++ b/style.css
@@ -27,6 +27,13 @@ body {
     transform: rotateX(50deg) rotateY(0deg) rotateZ(-10deg) translateZ(-100px);
 }
 
+.buildings {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1; /* 건물 이미지가 격자 무늬 위에 표시되도록 설정 */
+}
+
 .floating_mini_icons {
     position: absolute;
     width: 100%;
