--- a/style.css
+++ b/style.css
@@ -31,8 +31,15 @@ body {
     display: none;
     position: absolute;
     width: 100%;
-    height: 100%;
+    bottom: -200px;
     z-index: 1; /* 건물 이미지가 격자 무늬 위에 표시되도록 설정 */
+    justify-content: center;
+    gap: 20px;
+}
+
+.buildings img {
+    width: 250px;
+    height: auto;
 }
 
 .floating_mini_icons {
