--- a/style.css
+++ b/style.css
@@ -38,9 +38,26 @@ body {
 }
 
 .buildings img {
-    width: 150px;
+    width: 1500px;
     height: auto;
 }
+
+.building1 { left: 20%; top: 20%; z-index: 2; }
+.building2 { left: 20%; top: 20%; z-index: 1; }
+.building3 { left: 30%; top: 30%; }
+.building4 { left: 40%; top: 40%; }
+.building5 { left: 50%; top: 50%; }
+.building6 { left: 60%; top: 60%; }
+.building7 { left: 70%; top: 70%; }
+.building8 { left: 80%; top: 80%; }
+.building9 { left: 90%; top: 90%; }
+.building10 { left: 10%; top: 90%; }
+.building11 { left: 20%; top: 80%; }
+.building12 { left: 30%; top: 70%; }
+.building13 { left: 40%; top: 60%; }
+.building14 { left: 50%; top: 50%; }
+.building15 { left: 60%; top: 40%; }
+.building16 { left: 70%; top: 30%; }
 
 .floating_mini_icons {
     position: absolute;
@@ -110,7 +127,7 @@ body {
     position: absolute;
     top: 80%;
     left: -200px; /* 초기 위치 설정 */
-    transform: translateY(-50%);
+    transform: translateY(-50%) translateY(-60%);
     transition: left 2s ease;
     z-index: 3; /*가장 위쪽에 배치*/
     width: 60px;
