Feat: 오디오 버튼 추가

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
     position: relative;
 }
 
+#toggleButton{
+    z-index: 3;
+}
+
 .background-grid {
     position: absolute;
     top: -50;
