--- a/style.css
+++ b/style.css
@@ -10,7 +10,17 @@ body {
 }
 
 #toggleButton{
-    z-index: 3;
+    position: fixed; /* 고정 위치 설정 */
+    top: 20px; /* 상단 여백 */
+    right: 20px; /* 우측 여백 */
+    padding: 5px 10px; /* 내부 여백 */
+    font-size: 36px; /* 폰트 크기 */
+    background-color:rgba(0, 0, 0, 0); /* 배경색 */
+    color: white; /* 글자색 */
+    border: none; /* 테두리 제거 */
+    border-radius: 5px; /* 테두리 둥글기 설정 */
+    cursor: pointer;
+    z-index: 3; /* 다른 요소들 위에 표시 */
 }
 
 .background-grid {
