--- a/style.css
+++ b/style.css
@@ -267,3 +267,65 @@ body {
     color: white;
     font-family:'Dongle', cursive;
 }
+
+
+
+.character-choose-popup{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(231, 220, 241);
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    width: 400px;
+    height: 300px;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.popup-backyong-img {
+    width: 150px;
+    height: auto;
+    margin: 0 auto;
+}
+
+.popup-backyong-speech-bubble {
+    width: 180px;
+    left: 50%;
+    transform: translateX(50%);
+    background-color: #ffcccb;
+    border: 1px solid #d9f0ff;
+    padding: 8px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+#popup-backyong-speech-bubble p {
+    margin: 0;
+    font-size: 20px;
+    color: white;
+    font-family: 'Single Day', cursive;
+}
+
+.popup-backyong-buttons {
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    bottom: 100px; /* 팝업 하단에서 약간의 간격 */
+}
+
+.popup-backyong-check,
+.popup-backyong-close {
+    margin: 0 10px; /* 버튼 사이의 간격 */
+    padding: 10px 18px;
+    font-size: 20px;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    color: rgb(62, 59, 59);
+    font-family: 'Gamja flower', cursive, sans-serif;
+}
