--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgb(231, 220, 241);
+    background-color: #f8e7e6;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
@@ -287,45 +287,47 @@ body {
     text-align: center;
 }
 
-.popup-backyong-img {
-    width: 150px;
-    height: auto;
-    margin: 0 auto;
-}
-
 .popup-backyong-speech-bubble {
     width: 180px;
     left: 50%;
     transform: translateX(50%);
     background-color: #ffcccb;
     border: 1px solid #d9f0ff;
-    padding: 8px;
+    padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 #popup-backyong-speech-bubble p {
     margin: 0;
-    font-size: 20px;
+    font-size: 17px;
     color: white;
     font-family: 'Single Day', cursive;
 }
 
+.popup-backyong-img {
+    width: 150px;
+    height: auto;
+    margin: 0 auto;
+}
+
 .popup-backyong-buttons {
-    justify-content: center;
     width: 100%;
-    position: absolute;
-    bottom: 100px; /* 팝업 하단에서 약간의 간격 */
+    top: 10px; /* 팝업 하단에서 약간의 간격 */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .popup-backyong-check,
 .popup-backyong-close {
+    width: 160px; /* 버튼의 고정된 너비 */
     margin: 0 10px; /* 버튼 사이의 간격 */
     padding: 10px 18px;
-    font-size: 20px;
+    font-size: 16px;
     background-color: #ffffff;
-    border: none;
+    border: 1px solid #d9f0ff;
     border-radius: 5px;
     cursor: pointer;
     color: rgb(62, 59, 59);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     font-family: 'Gamja flower', cursive, sans-serif;
+    text-align: center;
 }
