--- a/style.css
+++ b/style.css
@@ -394,3 +394,14 @@ body {
     font-family: 'Gamja flower', cursive, sans-serif;
     text-align: center;
 }
+
+#modal-overlay{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+    z-index: 999; /* Higher than popup */
+}
