--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ body {
 }
 
 
-
+/*백경이 팝업*/
 .backyong-popup{
     display: none;
     position: fixed;
@@ -312,7 +312,7 @@ body {
 
 .popup-backyong-buttons {
     width: 100%;
-    top: 10px; /* 팝업 하단에서 약간의 간격 */
+    top: 10px; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -332,14 +332,14 @@ body {
     text-align: center;
 }
 
-
+/*뿌공이 팝업*/
 .bbugong-popup{
     display: none;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #f8e7e6;
+    background-color: #eee7fd;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
@@ -354,7 +354,7 @@ body {
     width: 180px;
     left: 50%;
     transform: translateX(50%);
-    background-color: #ffcccb;
+    background-color: #d4c8ed;
     border: 1px solid #d9f0ff;
     padding: 10px;
     border-radius: 5px;
@@ -368,14 +368,15 @@ body {
 }
 
 .popup-bbugong-img {
-    width: 150px;
+    top: 10px;
+    width: 120px;
     height: auto;
-    margin: 0 auto;
+    margin: 50px auto 10px;
 }
 
 .popup-bbugong-buttons {
     width: 100%;
-    top: 10px; /* 팝업 하단에서 약간의 간격 */
+    margin: 20px auto 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -402,6 +403,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-    z-index: 999; /* Higher than popup */
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999; 
 }
