--- a/style.css
+++ b/style.css
@@ -406,3 +406,17 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999; 
 }
+
+/*백경이 팝업 선택*/
+.backyong.animate-right {
+    animation: moveRight 0.5s forwards;
+}
+
+@keyframes moveRight {
+    from {
+        transform: translateX(40);
+    }
+    to {
+        transform: translateX(300px) translateY(-50px);
+    }
+}
