Feat: 뿌공이 선택 시, 뿌공이 중으로 이동 구현 및 리셋 버튼 생성

--- a/style.css
+++ b/style.css
@@ -9,20 +9,6 @@ body {
     position: relative;
 }
 
-#toggleButton{
-    position: fixed; /* 고정 위치 설정 */
-    top: 20px; /* 상단 여백 */
-    right: 20px; /* 우측 여백 */
-    padding: 5px 10px; /* 내부 여백 */
-    font-size: 36px; /* 폰트 크기 */
-    background-color:rgba(0, 0, 0, 0); /* 배경색 */
-    color: white; /* 글자색 */
-    border: none; /* 테두리 제거 */
-    border-radius: 5px; /* 테두리 둥글기 설정 */
-    cursor: pointer;
-    z-index: 3; /* 다른 요소들 위에 표시 */
-}
-
 .background-grid {
     position: absolute;
     top: -50;
@@ -39,6 +25,35 @@ body {
 
 .background-grid.rotate-left {
     transform: rotateX(50deg) rotateY(0deg) rotateZ(-25deg) translateZ(-100px);
+}
+
+#reset-button{
+    position: absolute;
+    top: 36px;
+    right: 90px;
+    padding: 5px 10px; /* 내부 여백 */
+    font-size: 15px; /* 폰트 크기 */
+    background-color:#d4c8ed; /* 배경색 */
+    color: white; /* 글자색 */
+    border: none; /* 테두리 제거 */
+    border-radius: 5px; /* 테두리 둥글기 설정 */
+    cursor: pointer;
+    z-index: 1000;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+}
+
+#audio-toggleButton{
+    position: fixed; /* 고정 위치 설정 */
+    top: 20px; /* 상단 여백 */
+    right: 20px; /* 우측 여백 */
+    padding: 5px 10px; /* 내부 여백 */
+    font-size: 36px; /* 폰트 크기 */
+    background-color:rgba(0, 0, 0, 0); /* 배경색 */
+    color: white; /* 글자색 */
+    border: none; /* 테두리 제거 */
+    border-radius: 5px; /* 테두리 둥글기 설정 */
+    cursor: pointer;
+    z-index: 3; /* 다른 요소들 위에 표시 */
 }
 
 .buildings {
@@ -181,15 +196,6 @@ body {
     height: auto;
     cursor: pointer;
 }
-
-/* .backyong:hover {
-    filter: brightness(1);
-}
-
-.bbugong:hover {
-    filter: brightness(1);
-
-} */
 
 #backyong-heart {
     position: absolute;
@@ -417,5 +423,19 @@ body {
     }
     to {
         transform: translateX(300px) translateY(-50px);
+    }
+}
+
+/*뿌공이 팝업 선택*/
+.bbugong.animate-left {
+    animation: moveLeft 0.5s forwards;
+}
+
+@keyframes moveLeft {
+    from {
+        transform: translateX(40);
+    }
+    to {
+        transform: translateX(300px) translateY(-20px);
     }
 }
