Feat: 스크롤 기능 유지 및 스크롤바 제거

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    -ms-overflow-style: none;
     margin: 0;
     padding: 0;
     background-color: white;
@@ -7,6 +8,10 @@ body {
     align-items: center;
     height: 100vh;
     position: relative;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 .background-grid {
