Feat: before백경이, 뿌공이 생성 및 위치 조정

--- a/style.css
+++ b/style.css
@@ -176,23 +176,11 @@ body, html {
     transform: rotateX(50deg) rotateY(0deg) rotateZ(-25deg) translateZ(-100px);
 }
 
-/* .backyong-before {
-    position: absolute;
-    top: 80%;
-    left: -600px; /* 초기 위치 설정 */
-    /* transform: translateX(250%) translateY(-20%);
-    transition: left 2s ease;
-    z-index: 3; /*가장 위쪽에 배치*/
-    /* width: 80px;
-    height: auto;
-    cursor: pointer;
-} */ 
-
-.backyong {
+.backyong-before {
     position: absolute;
     top: 80%;
     left: -600px; /*초기 위치 설정 */
-    transform: translateX(120%) translateY(-20%); 
+    transform: translateX(200%) translateY(-20%); 
     transition: left 2s ease;
     z-index: 3; /*가장 위쪽에 배치*/
     width: 80px;
@@ -200,12 +188,31 @@ body, html {
     cursor: pointer;
 }
 
-.bbugong {
+.bbugong-before {
     position: absolute;
     top: 78%;
     left: -600px; /* 초기 위치 설정 */
-    transform: translateX(500%) translateY(-30%);
+    transform: translateX(650%) translateY(-40%);
     transition: left 2s ease;
+    z-index: 3; /* 가장 위쪽에 배치 */
+    width: 60px;
+    height: auto;
+    cursor: pointer;
+}
+
+.backyong {
+    position: absolute;
+    top: 80%;
+    z-index: 3; /*가장 위쪽에 배치*/
+    width: 80px;
+    height: auto;
+    cursor: pointer;
+    display: none;
+}
+
+.bbugong {
+    position: absolute;
+    top: 78%;
     z-index: 3; /* 가장 위쪽에 배치 */
     width: 60px;
     height: auto;
@@ -217,7 +224,7 @@ body, html {
     position: absolute;
     top: 77%;
     /* left: 65.5%; */
-    left: calc(25px + 50%);
+    left: calc(90px + 50%);
     width: 20px;
     height: auto;
     display: none; 
@@ -229,8 +236,8 @@ body, html {
 
 #bbugong-heart {
     position: absolute;
-    top: 74%;
-    left: calc(222px + 50%);
+    top: 73.5%;
+    left: calc(312px + 50%);
     width: 15px;
     height: auto;
     display: none; 
@@ -243,7 +250,7 @@ body, html {
 #backyong-speech-bubble {
     position: absolute;
     top: 77%;
-    left: calc(-128px + 50%);
+    left: calc(-60px + 50%);
     background-color: #ffcccb;
     border: 1px solid #d9f0ff;
     padding: 10px;
@@ -260,7 +267,7 @@ body, html {
 #bbugong-speech-bubble {
     position: absolute;
     top: 73%;
-    left: calc(240px + 50%);
+    left: calc(332px + 50%);
     background-color: #d4c8ed;
     border: 1px solid #d9f0ff;
     padding: 10px;
