--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body, html {
 .buildings {
     display: none;
     position: absolute;
-    width: 1000%;
+    width: 100%;
     bottom: -200px;
     z-index: 1; /* 건물 이미지가 격자 무늬 위에 표시되도록 설정 */
     justify-content: center;
@@ -72,26 +72,30 @@ body, html {
 }
 
 .buildings img {
-    width: 1500px;
+    position: absolute;
+    width: 150px;
     height: auto;
 }
 
-.building1 { left: 20%; top: 20%; z-index: 2; }
-.building2 { left: 20%; top: 20%; z-index: 1; }
-.building3 { left: 30%; top: 30%; }
-.building4 { left: 40%; top: 40%; }
-.building5 { left: 50%; top: 50%; }
-.building6 { left: 60%; top: 60%; }
-.building7 { left: 70%; top: 70%; }
-.building8 { left: 80%; top: 80%; }
-.building9 { left: 90%; top: 90%; }
-.building10 { left: 10%; top: 90%; }
-.building11 { left: 20%; top: 80%; }
-.building12 { left: 30%; top: 70%; }
-.building13 { left: 40%; top: 60%; }
-.building14 { left: 50%; top: 50%; }
-.building15 { left: 60%; top: 40%; }
-.building16 { left: 70%; top: 30%; }
+.A11 { left: -0%; top: 0%; z-index: 2; }
+.A12 { left: 20%; top: 20%; z-index: 1; }
+.A13 { left: 30%; top: 30%; }
+.A15 { left: 40%; top: 40%; }
+.A15-mini { left: 50%; top: 50%; }
+.A21 { left: 60%; top: 60%; }
+.A22 { left: 70%; top: 70%; }
+.A23 { left: 80%; top: 80%; }
+.A26 { left: 90%; top: 90%; }
+.A27 { left: 10%; top: 90%; }
+.B11 { left: 20%; top: 80%; }
+.B12 { left: 30%; top: 70%; }
+.B13 { left: 40%; top: 60%; }
+.B14 { left: 50%; top: 50%; }
+.B15 { left: 60%; top: 40%; }
+.B21 { left: 70%; top: 30%; }
+.B22 { left: 70%; top: 30%; }
+.C23 { left: 70%; top: 30%; }
+.C24 { left: 70%; top: 30%; }
 
 .floating_mini_icons {
     position: absolute;
