--- a/style.css
+++ b/style.css
@@ -95,6 +95,8 @@ margin: 0;
     padding: 10px;
     cursor: pointer;
     display: none;
+    color: white;
+    font-size: 20px;
     font-family: 'Comic Sans MS', cursive, sans-serif;
 
 }
