--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ margin: 0;
     height: 100%;
     position: relative;
     overflow: hidden; /* 스크롤 가능하게 설정 */
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,6 +116,7 @@ margin: 0;
     cursor: pointer;
     text-align: center;
     font-family: 'Comic Sans MS', cursive, sans-serif;
+
 }
 
 .floating_mini_icons {
@@ -488,4 +489,64 @@ margin: 0;
     to {
         transform: translateX(-80px) translateY(20px);
     }
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1002;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+    text-align: center;
+    background-color: #fefefe;
+    margin: 6% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height: 600px;
+    max-width: 800px;
+    border-radius: 10px; /* 모달 창 모서리를 둥글게 만듭니다 */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* 선택적: 그림자 효과 추가 */
+}
+
+.modal-img{
+    width: 600px;
+    height: 400px;
+    margin-top:5px;
+    border-radius: 10px; /* 모달 창 모서리를 둥글게 만듭니다 */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* 선택적: 그림자 효과 추가 */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+h2{
+    font-size: 30px;
+    font-family: 'Jua', cursive;
+}
+
+.modal-content p{
+    font-size: 18px;
+    font-family: 'Gamja flower', cursive;
+    font-weight: 800;
+    margin-top: 5px;
+    margin-bottom: 0px;
 }
